force-app/main/default/objects/HCF_Surgeon_Certification__c/HCF_Surgeon_Certification__c.object-meta.xml
<CustomObject>
    <description>Junction object informing HCF Accounts of which Certifications exist against Surgeon Records</description>
    <label>HCF Surgeon Certification</label>
    <nameField>
        <displayFormat>HSC-{0000000}</displayFormat>
        <label>HCF Surgeon Certification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HCF Surgeon Certification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>