force-app/main/default/objects/HCF_Surgeon_Certification__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Certification assigned against a Surgeon</description>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Surgeon Certification Certifications</relationshipLabel>
    <relationshipName>HCF_Surgeon_Certification</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>