force-app/main/default/objects/HCF_Surgeon_Certification__c/fields/Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>Certification_Name__c</fullName>
    <formula>TEXT(Certification__r.Certification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Name</label>
    <type>Text</type>
</CustomField>