force-app/main/default/objects/HCF_Surgeon_Certification__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <formula>Certification__r.Effective_From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>