force-app/main/default/objects/HCF_Surgeon_Certification__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <formula>Certification__r.Effective_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>