force-app/main/default/objects/HCF_Surgeon_Certification__c/fields/Health_Care_Facility__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Health Care Facility Account Id</description>
    <label>Health Care Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surgeon Certifications</relationshipLabel>
    <relationshipName>HCF_Surgeon_Certification</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>