force-app/main/default/objects/HCF_Surgeon_Certification__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Surgeon Mapping who has Certification records and exists against a Health Care Facility</description>
    <label>Surgeon</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HCF Surgeon Certification (Surgeon)</relationshipLabel>
    <relationshipName>HCF_Surgeon_Certification1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>