force-app/main/default/objects/HCF_Surgeon_Certification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Health_Care_Facility__c</columns>
    <columns>Surgeon__c</columns>
    <columns>Certification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>