force-app/main/default/objects/HCF_Surgeon_Certification__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Certification__c</columns>
    <columns>Active__c</columns>
    <columns>Certification_Name__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <columns>Health_Care_Facility__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OBJECT_ID</columns>
    <columns>Surgeon__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>